fixed the ugly photo stretching on mobile

--- a/public/screen.css
+++ b/public/screen.css
@@ -44,7 +44,6 @@ hr {
 .header-container {
   width: 100%;
   height: 50px;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -52,7 +51,6 @@ hr {
 
 .sub-header-line-before {
   border-top: 1px solid #959ba0;
-
   flex: 1;
   position: relative;
   margin-right: 12px;
@@ -60,7 +58,6 @@ hr {
 
 .sub-header-line-after {
   border-top: 1px solid #959ba0;
-
   flex: 1;
   position: relative;
   margin-left: 12px;
@@ -79,7 +76,9 @@ figure {
 }
 
 img {
+  height: 100%;
   width: 100%;
+  object-fit: cover;
 }
 
 .diptych {
@@ -92,4 +91,15 @@ footer {
   background-color: #959ba0;
   display: flex;
   justify-content: center;
+}
+
+@media all and (max-width: 768px) {
+  .photoset {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .diptych {
+    width: 80vw;
+  }
 }
